Reverted changes from r2136 in Linux start scripts. Added same java parameters as for Windows start scripts. Updated README.txt to match general description from "http://code.google.com/p/jpcsp/"