@@ -1,2 +1,2 @@
 #!/bin/sh\n
-java -Xmx1024m -cp "bin/*;lib/*;lib/amd-64/*" -Djava.library.path=lib/amd-64 jpcsp.MainGUI
+java -Xmx1024m -XX:MaxPermSize=64m -XX:ReservedCodeCacheSize=64m -Djava.library.path=lib/amd-64 -jar bin/jpcsp.jar
